Add support for defining "severity" in .cflintrc includes